# xv6-rust

./: .gitignore  .gitmodules  LICENSE  Makefile  README.en.md  README.md  bininit  fs.img  kernel.S  kernel.asm
kernel/: .gdbinit  .gitignore  Cargo.toml  Makefile  fs.img  kernel.S  rust-toolchain.toml
kernel/.cargo/: config  config.toml
kernel/src/: console.rs  entry.asm  kernel.ld  kernel_syscall.rs  lib.rs  logo.txt  main.rs  misc.rs  panic.rs  print.rs  printf.rs  rust_main.rs  sbi.rs  shutdown.rs  start.rs  trap.rs
kernel/src/arch/: mod.rs
kernel/src/asm/: entry.S  kernelvec.S  switch.S  swtch.S  trampoline.S
kernel/src/console/: console.rs  mod.rs  uart.rs
kernel/src/define/: e1000.rs  fs.rs  layout.rs  memlayout.rs  mod.rs  param.rs  virtio.rs
kernel/src/driver/: console.rs  mod.rs  pci.rs  plic.rs  uart.rs  virtio_disk.rs
kernel/src/fs/: bio.rs  bitmap.rs  devices.rs  dinode.rs  dir.rs  file.rs  file_table.rs  inode.rs  log.rs  mod.rs  pipe.rs  ramdisk.rs  stat.rs  stdio.rs  superblock.rs
kernel/src/interrupt/: handler.rs  mod.rs  plic.rs  trap.rs
kernel/src/ipc/: bitmap.rs  fifo.rs  mod.rs  msgqueue.rs  semaphore.rs  sharemem.rs
kernel/src/linker/: qemu.ld
kernel/src/lock/: mod.rs  sleeplock.rs  spinlock.rs
kernel/src/logo/: logo.txt  mod.rs
kernel/src/memory/: address.rs  kalloc.rs  mod.rs
kernel/src/net/: e1000.rs  mbuf.rs  mod.rs  protocol.rs
kernel/src/process/: context.rs  cpu.rs  elf.rs  manager.rs  mod.rs  process.rs  scheduler.rs  thread.rs  trapframe.rs
kernel/src/register/: clint.rs  mcounteren.rs  medeleg.rs  mepc.rs  mhartid.rs  mideleg.rs  mie.rs  mod.rs  mstatus.rs  ra.rs  satp.rs  scause.rs  sepc.rs  sie.rs  sip.rs  sscratch.rs  sstatus.rs  stvec.rs  time.rs  tp.rs
mkfs/: .gitignore  Cargo.toml  Makefile
mkfs/src/: main.rs
os/: Cargo.toml  Makefile
os/src/: lib.rs  main.rs  panic.rs  rust_main.rs  start.rs
os/src/define/: mod.rs  (+1 more)
(+191 files in other folders)
