[package]
name = "kernel"
version = "0.1.0"
authors = ["KuangjuX <qcx@tju.edu.cn>", "Jaic1 <506933131@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10.0"
bitflags = "1.2.1"
array-const-fn-init = "0.1.1"
spin = "0.5.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
array-macro = "2.0.0"
xmas-elf = "0.8.0"


allocator = { path = "../allocator" }

[features]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

